// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should close on click outside popup  1`] = `
<PopupTest
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 2px 2px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
          }
        }
      />
      popup content
    </div>
    <button
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should close on click outside popup  2`] = `
<PopupTest
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 2px 2px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
          }
        }
      />
      popup content
    </div>
    <button
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should close on click outside popup (closeOnDocumentClick = true ) 1`] = `
<PopupTest
  closeOnDocumentClick={true}
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 2px 2px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
          }
        }
      />
      popup content
    </div>
    <button
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should close on click outside popup (closeOnDocumentClick = true ) 2`] = `
<PopupTest
  closeOnDocumentClick={true}
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <button
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should render correctly  1`] = `
<Popup
  arrow={true}
  arrowStyle={Object {}}
  className=""
  closeOnDocumentClick={false}
  contentStyle={Object {}}
  defaultOpen={false}
  modal={false}
  overlayStyle={Object {}}
  position="bottom center"
  trigger={
    <button>
       Trigger
    </button>
  }
  triggerOn="click"
>
  popup content
</Popup>
`;

exports[`it should render correctly on click   1`] = `
<PopupTest>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 2px 2px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
          }
        }
      />
      popup content
    </div>
    <button
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should render correctly on click (triggerOn = 'click')  1`] = `
<PopupTest
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 2px 2px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
          }
        }
      />
      popup content
    </div>
    <button
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should render correctly on hover (triggerOn = 'hover')  1`] = `
<PopupTest
  triggerOn="hover"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="hover"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 2px 2px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
          }
        }
      />
      popup content
    </div>
    <button
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;
